fix full view title alignment

--- a/include/css/main.css
+++ b/include/css/main.css
@@ -51,7 +51,7 @@ margin: 10px 0 0 0;
 .view-thumbnail .title {
   position: absolute;
   top: 10px;
-left: 36px;
+  left: 30px;
   max-width: 200px;
   background: black;
   padding: 5px;
